Adds style, and favicon img

--- a/src/css/style.less
+++ b/src/css/style.less
@@ -1,26 +1,53 @@
 /* You can add global styles to this file, and also import other style files */
 body {
-  background: #136a8a; /* fallback for old browsers */
-  background: -webkit-linear-gradient(to left, #b3e6eb, #6281c9);
-  background: linear-gradient(to left, #b3e6eb, #6281c9);
+  background: linear-gradient(to left, #be97dc, #d698b9, #8b3cdf);
 }
-
+.create-todo{
+  float: right;
+}
+.credits{
+  text-align: center;
+}
+.clipboard-img{
+  width: 3%;
+}
+.display-container{
+  background-color: #eda1ab;
+}
+.panel-default > .panel-heading{
+  background-color: #be97dc;
+}
+.panel-default > .panel-footer{
+  background-color: #be97dc;
+}
 .no-padding {
   padding: 0 !important;
 }
-
 .no-margin {
   margin: 0 !important;
 }
-
-.white {
-  color: white !important;
+h1 {
+  margin: 50px auto 0px auto;
+  font-family: "Sacramento", cursive;
+  font-size: 5.625rem;
+  line-height: 2;
 }
-
+h5 {
+  font-family: "Montserrat", sans-serif;
+}
+hr{
+  border-style: none;
+  border-top-style: dotted;
+  border-color:#eda1ab;
+  border-width: 5px;
+  width: 75%;
+}
+ul{
+  list-style: none;
+}
 .strike-through {
   text-decoration: line-through;
 }
-
 textarea {
   width: 100%;
   max-width: 100%;
@@ -28,26 +55,27 @@ textarea {
   max-height: 16em;
   font-size: 16px;
 }
-
 strong + small {
-    display: block;
+  display: block;
 }
-
-input[type=checkbox] {
+input[type="checkbox"] {
   margin-right: 1em;
 }
-
 div.pull-right a {
   margin-left: 1em;
 }
 .todoListMain .theList {
   color: #333;
-  background-color: rgba(255, 255, 255, .5);
+  background-color: rgba(255, 255, 255, 0.5);
   padding: 15px;
   margin-bottom: 15px;
   border-radius: 5px;
   list-style: none;
 }
-.margin{
- left: 5px;
+.margin {
+  left: 5px;
+}
+.title-div{
+text-align: center;
+color: white !important;
 }
