--- a/src/css/style.less
+++ b/src/css/style.less
@@ -1,6 +1,10 @@
 /* You can add global styles to this file, and also import other style files */
 body {
-  background: linear-gradient(to left, #be97dc, #d698b9, #8b3cdf);
+  // background: linear-gradient(to left, #be97dc, #d698b9, #8b3cdf);
+  background: #000046;  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to right, #1CB5E0, #000046);  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to right, #1CB5E0, #000046); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
 }
 .create-todo{
   float: right;
@@ -12,13 +16,23 @@ body {
   width: 3%;
 }
 .display-container{
-  background-color: #eda1ab;
+  background-color: #2c3e50;
+}
+p{
+  font-family: 'Crimson Text', serif;
+  color:white;
+}
+.panel-title{
+  font-family: 'Crimson Text', serif;
+  color:white;
+  position: relative;
+  left: 10px;
 }
 .panel-default > .panel-heading{
-  background-color: #be97dc;
+  background-color: #bdc3c7;
 }
 .panel-default > .panel-footer{
-  background-color: #be97dc;
+  background-color: #bdc3c7;
 }
 .no-padding {
   padding: 0 !important;
@@ -28,22 +42,30 @@ body {
 }
 h1 {
   margin: 50px auto 0px auto;
-  font-family: "Sacramento", cursive;
+  font-family: 'Crimson Text', serif;
   font-size: 5.625rem;
   line-height: 2;
 }
+h4{
+  font-family: 'Crimson Text', serif;
+  color: #fff;
+}
 h5 {
-  font-family: "Montserrat", sans-serif;
+  font-family: 'Crimson Text', serif;
 }
 hr{
   border-style: none;
   border-top-style: dotted;
-  border-color:#eda1ab;
+  border-color:#2c3e50;
   border-width: 5px;
   width: 75%;
 }
 ul{
   list-style: none;
+}
+#view-todo{
+  position: relative;
+  left: 30px;
 }
 .strike-through {
   text-decoration: line-through;
@@ -54,6 +76,7 @@ textarea {
   min-height: 8em;
   max-height: 16em;
   font-size: 16px;
+  font-family: 'Crimson Text', serif;
 }
 strong + small {
   display: block;
